[package]
name = "hd"
version = "0.1.0"
edition = "2024"
author = "Ezra Godfrey <ezra.godfrey@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap-num = "1.2.0"
clap_derive = "4.3.12"

[profile.release]
strip = true            # Automatically strip symbols from the binary.
opt-level = "z"         # Optimize for space/size.
lto = true              # Enable link time optimizations.
codegen-units = 1       # minimize parallel codgen.
